--- a/Valuator/Pages/Index.cshtml
+++ b/Valuator/Pages/Index.cshtml
@@ -10,6 +10,10 @@
         <div class="col-10">
             <textarea name="text" rows="5" cols="50"></textarea>
             <input type="submit" />
+            @Html.DropDownList(
+                "shardId", 
+                new SelectList(Model.countries, "Value", "Key")
+            )
         </div>
     </form>
 </div>
